fix md icon alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,21 +20,21 @@
   font-size: 15px;
   width: 15px;
   height: 15px;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 .material-icons.md-18 {
   font-size: 18px;
   width: 18px;
   height: 18px;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 .material-icons.md-24 {
   font-size: 24px;
   width: 24px;
   height: 24px;
-  vertical-align: baseline;
+  vertical-align: top;
 }
 
 @import 'bootstrap-sprockets';
